--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.3",
-    "canadapost-api": "^1.2.0"
+    "canadapost-api": "^1.2.0",
+    "exceljs": "^4.3.0"
   },
   "type": "module"
 }
