--- a/template.yml
+++ b/template.yml
@@ -58,6 +58,24 @@ Resources:
                         RestApiId: !Ref MyApi
                         Path: /quote
                         Method: post
+    CreateOrder:
+        Type: AWS::Serverless::Function
+        Properties:
+            FunctionName: !Sub 'order'
+            Handler: routes.order
+            Runtime: nodejs16.x
+            Timeout: 100
+            Role:
+                Fn::GetAtt:
+                    - LambdaExecutionRole
+                    - Arn
+            Events:
+                GetEvent:
+                    Type: Api
+                    Properties:
+                        RestApiId: !Ref MyApi
+                        Path: /order
+                        Method: post
     LambdaExecutionRole:
         Description: Creating service role in IAM for AWS Lambda
         Type: AWS::IAM::Role
