--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "canadapost-api": "^1.2.0",
-    "exceljs": "^4.3.0"
+    "exceljs": "^4.3.0",
+    "qs": "^6.11.0"
   }
 }
