--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.1.3",
     "canadapost-api": "^1.2.0",
     "exceljs": "^4.3.0",
-    "stripe": "^11.12.0"
+    "stripe": "^11.12.0",
+    "qs": "^6.11.0"
   }
 }
