--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.1.3",
+    "axios": "^1.3.4",
     "canadapost-api": "^1.2.0",
     "exceljs": "^4.3.0",
-    "stripe": "^11.12.0",
-    "qs": "^6.11.0"
+    "qs": "^6.11.0",
+    "stripe": "^11.12.0"
   }
 }
