--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "exceljs": "^4.3.0",
     "qs": "^6.11.0",
-    "stripe": "^11.12.0"
+    "stripe": "^11.12.0",
+    "uuid": "^9.0.0"
   }
 }
