--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "uber.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:api": "sam build && sam local start-api --env-vars .env.json"
+    "start:api": "sudo sam build && sam local start-api --env-vars .env.json"
   },
   "author": "",
   "license": "ISC",
