--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1396.0",
+    "@aws-sdk/client-ssm": "^3.613.0",
     "axios": "^1.3.4",
     "exceljs": "^4.3.0",
     "qs": "^6.11.0",
